hphp/test/slow/readonly/readonly_variadic.php.expectf
Fatal error: Variadic parameters cannot be marked readonly in %s on line 5
